# libavtp-demos

./: .gitignore  README.md  meson.build
examples/hw-demos/aaf-crf/: aaf-listener-hw.c  aaf-talker-hw.c  crf-listener-hw.c  crf-talker-hw.c  meson.build  teardown-cbs.sh
examples/hw-demos/aaf-crf/dbg/: pwm-debug.c  pwm-test.c  sdp-capture-test.c  sdp-edge-capture.c
examples/hw-demos/aaf-crf/misc/metrics/: plot_benchmark.py  plot_histograms.py
examples/hw-demos/aaf-crf/misc/refs/: README.md
examples/hw-demos/aaf-crf/misc/refs/cs2600_cfg/: CS2600_CLK_IN_48kHz_CLK_OUT_24M576_REF_CLK_12M_High_Resolution_holdover_enabled.py  CS2600_CLK_IN_48kHz_CLK_OUT_24M576_REF_CLK_Internal_OSC_High_Resolution_holdover_enabled.py  CS2600_Multiplier_Mode_ARC_Enable_MCLK_12M288_BCLK_x64_FSYNC.py  CS2600_Multiplier_Mode_ARC_Enable_MCLK_24M576_BCLK_x64_FSYNC.py  CS2600_Multiplier_Mode_ARC_Enable_MCLK_24M576_BCLK_x64_FSYNC_Phase_Alignment_Automatic.py  CS2600_Multiplier_Mode_CLK_IN_1kHz_CLK_OUT_24M576_REF_CLK_12M_High_Multiplication.py  CS2600_Multiplier_Mode_CLK_IN_2kHz_CLK_OUT_24M576_REF_CLK_12M_High_Multiplication.py  CS2600_Multiplier_Mode_CLK_IN_300Hz_CLK_OUT_12M288_REF_CLK_12M_Minimal.py  CS2600_Multiplier_Mode_CLK_IN_300Hz_CLK_OUT_24M576_REF_CLK_12M_High_Multiplication.py  CS2600_Multiplier_Mode_CLK_IN_48kHz_CLK_OUT_12M288_REF_CLK_12M_High_Resolution.py  CS2600_Multiplier_Mode_CLK_IN_48kHz_CLK_OUT_24M576_REF_CLK_12M_High_Resolution.py  CS2600_Multiplier_Mode_CLK_IN_48kHz_CLK_OUT_24M576_REF_CLK_Internal_OSC_High_Resolution.py  CS2600_PLL_lock_status_on_AUX1_OUT.py  CS2600_Phase_Alignment_Automatic.py  CS2600_Smart_Multiplier_Mode_Holdover_Mode.py  CS2600_Synthesizer_Mode_CLK_OUT_24M576_REF_CLK_12M.py  cs2600_i2c_config.py  cs2600_pyftdi.py
examples/hw-demos/aaf-crf/tools/: plot_histograms.py
examples/hw-demos/common/: aaf-profile.c  aaf-profile.h  alsa-util.c  alsa-util.h  bcm2711-pwm-clock.c  clock-adjust.h  crf-common.c  crf-common.h  crf-profile.h  crf-receiver.c  crf-receiver.h  cs2600.c  cs2600.h  devmem.c  devmem.h  mc-bcm2711.c  phc-utils.c  phc-utils.h  pi-hw.c  pi-hw.h  pi-servo.c  pi-servo.h  ptp-extts.c  ptp-extts.h  xsk-util.h
examples/hw-demos/rpi/: aaf-listener-rpi.c  aaf-talker-rpi.c  crf-listener-rpi.c  crf-talker-rpi.c  meson.build  setup-cbs.sh
examples/hw-demos/rpi/common/: aaf-profile.h  bcm2711-pwm-clock.c  bcm2711-pwm-clock.h  crf-profile.c  crf-receiver.c  crf-receiver.h  mc-bcm2711.c  mc-rp1.c  media-clock.c  media-clock.h  phc-utils.c  pi-servo.c  ptp-extts.c  ptp-extts.h  rp1-clock.c  rp1-clock.h  xsk-util.c
examples/hw-demos/rpi/dbg/: sdp-capture-test.c  sdp-diag.c  sdp-edge-capture.c
examples/hw-demos/rpi/doc/: i2s-source-fpga.md  igc-ppsfix.md  raspberry-pi-config.md  ubuntu-rt-setup.md
examples/hw-demos/rpi/dt/: crf-clk-tap.dts
examples/hw-demos/rpi/tools/: plot_benchmark.py
examples/hw-demos/rpi5-demo/: aaf-listener-rpi.c  crf-listener-rpi.c  meson.build  rp1-clock.c  rp1-clock.h  rp1_pll_frac_actuator.c
examples/hw-demos/rpi5-demo/dt/: crf-clk-tap.dts
unit/: test-aaf-profile.c  test-crf-profile.c
